Estilização de botões para menu de gráficos

--- a/public/dashboard/dashEstGame.html
+++ b/public/dashboard/dashEstGame.html
@@ -88,7 +88,8 @@
                     <button style="margin-top: 30px;" onclick="rotaGraf('quiz')">Quiz</button>
                     <button onclick="rotaGraf('game')">YourTricks Game</button>
                     <button onclick="rotaGraf('rankQuiz')">Ranking Quiz</button>
-                    <button onclick="rotaGraf('rankGame')">Ranking Game</button>
+                    <!-- Classe de botão selecionado adicionada 30/07/2024 -->
+                    <button onclick="rotaGraf('rankGame')" class="btnSel">Ranking Game</button>
                     <button onclick="rotaGraf('hist')">Histórico</button>
                 </div>
                 <div id="grafico1" class="display-block">
