--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -85,7 +85,8 @@
                 <div class="menuGrafico">
                     <h2>Selecione um gráfico</h2>
                     <!-- Criação de função externa para mudar rotas -->
-                    <button style="margin-top: 30px;" onclick="rotaGraf('quiz')">Quiz</button>
+                    <!-- Classe de botão selecionado adicionada 30/07/2024 -->
+                    <button style="margin-top: 30px;" onclick="rotaGraf('quiz')" class="btnSel">Quiz</button>
                     <button onclick="rotaGraf('game')">YourTricks Game</button>
                     <button onclick="rotaGraf('rankQuiz')">Ranking Quiz</button>
                     <button onclick="rotaGraf('rankGame')">Ranking Game</button>
