--- a/public/dashboard/historico.html
+++ b/public/dashboard/historico.html
@@ -91,7 +91,8 @@
                     <button onclick="rotaGraf('game')">YourTricks Game</button>
                     <button onclick="rotaGraf('rankQuiz')">Ranking Quiz</button>
                     <button onclick="rotaGraf('rankGame')">Ranking Game</button>
-                    <button onclick="rotaGraf('hist')">Histórico</button>
+                    <!-- Classe de botão selecionado adicionada 30/07/2024 -->
+                    <button onclick="rotaGraf('hist')" class="btnSel">Histórico</button>
                 </div>
                 <div id="grafico1" class="display-block">
                     <h1 style="color: white;">Confira suas estatísticas gerais no site YourTricks!</h1>
