--- a/public/dashboard/dashGame.html
+++ b/public/dashboard/dashGame.html
@@ -86,7 +86,8 @@
                     <h2>Selecione um gráfico</h2>
                     <!-- Criação de função externa para mudar rotas -->
                     <button style="margin-top: 30px;" onclick="rotaGraf('quiz')">Quiz</button>
-                    <button onclick="rotaGraf('game')">YourTricks Game</button>
+                    <!-- Classe de botão selecionado adicionada 30/07/2024 -->
+                    <button onclick="rotaGraf('game')" class="btnSel">YourTricks Game</button>
                     <button onclick="rotaGraf('rankQuiz')">Ranking Quiz</button>
                     <button onclick="rotaGraf('rankGame')">Ranking Game</button>
                     <button onclick="rotaGraf('hist')">Histórico</button>
