--- a/public/dashboard/dashEstQuiz.html
+++ b/public/dashboard/dashEstQuiz.html
@@ -98,7 +98,8 @@
                     <h3 style="color: white;">Este gráfico exibe os 10 usuários com as maiores pontuações no quiz, o nome dos usuários estão abaixo da pontuação!</h3>
                     <!-- Criação de elementos para realizar a mudança no tipo de gráfico -->
                     <div class="label-captura">
-                    Tipo de gráfico: <button onclick="session('line')">Linha</button><button onclick="session('bar')">Barra</button><button onclick="session('pie')">Pizza</button>
+                        Tipo de gráfico: <button onclick="session1('line')">Linha</button>
+                        <button onclick="session1('bar')">Barra</button><button onclick="session1('pie')">Pizza</button>
                     </div>
                     <h2>Você está em: <span id="posGame"></span></h2>
                     <h2 style="color: white;">Ranking de jogadores em tabela:</h2>
@@ -113,7 +114,7 @@
         document.getElementById('b_usuario').innerHTML = sessionStorage.NOME_USUARIO;
 
         let idUser = sessionStorage.ID_USUARIO;
-        let typeGraf = sessionStorage.typeGraf == undefined ? 'bar' : sessionStorage.typeGraf;
+        let typeGraf = sessionStorage.typeGrafRk == undefined ? 'bar' : sessionStorage.typeGrafRk;
         // Criação de exibição de posição para o usuário e tabela de ranking 12/07/2024
         let position = document.getElementById('posGame');
         let tabela = document.querySelector('.tblRank');
