--- a/public/dashboard/dashEstGame.html
+++ b/public/dashboard/dashEstGame.html
@@ -102,6 +102,8 @@
                         Tipo de gráfico: <button onclick="session1('line')">Linha</button><button
                         onclick="session1('bar')">Barra</button><button onclick="session1('pie')">Pizza</button>
                     </div>
+                    <!-- Adição de informativo no gráfico 31/07/2024 -->
+                    <h3 style="color: white; margin-bottom: 40px;">O gráfico de barra é recomendado para melhor visualização de ranking!</h3>
                     <h2>Você está em: <span id="posGame"></span></h2>
                     <h2 style="color: white;">Ranking de jogadores em tabela:</h2>
                     <!-- div para exibir o ranking em formato de tabela -->
