data de comentários

--- a/public/dashboard/dashEstQuiz.html
+++ b/public/dashboard/dashEstQuiz.html
@@ -96,7 +96,7 @@
                     <h3 style="color: white;">Consulte as informações abaixo do gráfico!</h3>
                     <canvas id="myChartCanvas1"></canvas>
                     <h3 style="color: white;">Este gráfico exibe os 10 usuários com as maiores pontuações no quiz, o nome dos usuários estão abaixo da pontuação!</h3>
-                    <!-- Criação de elementos para realizar a mudança no tipo de gráfico -->
+                    <!-- Criação de elementos para realizar a mudança no tipo de gráfico 05/06/2024 -->
                     <div class="label-captura">
                         Tipo de gráfico: <button onclick="session1('line')">Linha</button>
                         <button onclick="session1('bar')">Barra</button><button onclick="session1('pie')">Pizza</button>
@@ -105,7 +105,7 @@
                     <h3 style="color: white; margin-bottom: 40px;">O gráfico de barra é recomendado para melhor visualização de ranking!</h3>
                     <h2>Você está em: <span id="posGame"></span></h2>
                     <h2 style="color: white;">Ranking de jogadores em tabela:</h2>
-                    <!-- div para exibir o ranking em formato de tabela -->
+                    <!-- div para exibir o ranking em formato de tabela 12/06/2024 -->
                     <div class="tblRank"></div>
                 </div>
             </div>
