--- a/public/dashboard/dashEstGame.html
+++ b/public/dashboard/dashEstGame.html
@@ -92,8 +92,14 @@
                     <button onclick="rotaGraf('rankGame')" class="btnSel">Ranking Game</button>
                     <button onclick="rotaGraf('hist')">Histórico</button>
                 </div>
+
+                <!-- Geração de gráfico no html -->
                 <div id="grafico1" class="display-block">
                     <h3 style="color: white;">Consulte as informações abaixo do gráfico!</h3>
+                    <div class="btn-graf">
+                        <button class="btn-nav" onclick="atualizarGrafico('maior')">Maiores pontuações</button>
+                        <button class="btn-nav-white" onclick="atualizarGrafico('menor')">Menores pontuações</button>
+                    </div>
                     <canvas id="myChartCanvas1"></canvas>
                     <h3 style="color: white;">Este gráfico exibe os 10 usuários com as maiores pontuações no YourTricks
                         Game, o nome dos usuários estão abaixo da pontuação!</h3>
@@ -117,6 +123,8 @@
         document.getElementById('b_usuario').innerHTML = sessionStorage.NOME_USUARIO;
 
         let idUser = sessionStorage.ID_USUARIO;
+        // Variável para atualizar dados do gráfico 02/07/2024
+        let myChart;
         let typeGraf = sessionStorage.typeGrafRk == undefined ? 'bar' : sessionStorage.typeGrafRk;
         // Criação de exibição de posição para o usuário e tabela de ranking 12/07/2024
         let position = document.getElementById('posGame');
@@ -147,6 +155,10 @@
                 });
         }
 
+        // Criando objeto para plotar gráfico - labels e dados 02/08/2024
+        const structMa = { labels: [], dataPoints: [] } // Maiores pontuações
+        const structMe = { labels: [], dataPoints: [] } // Menores pontuações
+
         function plotarGrafico(dadosRecebidos) {
             console.log('Iniciando plotagem do gráfico...');
 
@@ -165,10 +177,19 @@
 
             let row = '';
             dadosRecebidos.forEach(element => {
-                row += `
-                <tr>
-                    <td>${element.nome}</td><td>${element.pontuacao} pontos</td>
-                </tr>`;
+                // Filtro para atribuição de valores 02/08/2024
+                if(element.tipo == "maior"){
+                    row += `
+                    <tr>
+                        <td>${element.nome}</td><td>${element.pontuacao} pontos</td>
+                    </tr>`;
+
+                    structMa.labels.push(`${element.nome}`);
+                    structMa.dataPoints.push(element.pontuacao);
+                } else{
+                    structMe.labels.push(`${element.nome}`);
+                    structMe.dataPoints.push(element.pontuacao);
+                }
             })
 
             console.log(`Linhas de tabela: \n${row}\n\n`);
@@ -188,10 +209,10 @@
 
             // Estrutura para plotar gráfico
             const dados = {
-                labels: labels,
+                labels: structMa.labels,
                 datasets: [{
                     label: 'Pontuação',
-                    data: dataPoints,
+                    data: structMa.dataPoints,
                     fill: false,
                     backgroundColor: 'rgb(139, 166, 147)',
                     borderColor: '#e63e3e',
@@ -201,9 +222,9 @@
             };
 
             console.log('Labels:');
-            console.log(labels);
+            console.log(structMa.labels);
             console.log('Dados:');
-            console.log(dados.datasets);
+            console.log(structMa.dataPoints);
             console.log('----------------------------------------------');
 
             // Configuração do gráfico
@@ -229,10 +250,24 @@
                 }
             };
 
+            // Verificando a existência de um gráfico e o removendo 02/02/2024
+            if (myChart) {
+                myChart.destroy();
+            }
+
             const ctx = document.getElementById('myChartCanvas1').getContext('2d');
 
             // Criando e adicionando o gráfico na tela
-            new Chart(ctx, config);
+            myChart = new Chart(ctx, config);
+        }
+
+        // Função para realizar atualização em gráfico 02/07/2024
+        function atualizarGrafico(tipo) {
+            const dados = tipo === 'maior' ? structMa : structMe;
+
+            myChart.data.labels = dados.labels;
+            myChart.data.datasets[0].data = dados.dataPoints;
+            myChart.update();
         }
     </script>
 </body>
