Scripts para apresentação

--- a/public/dashboard/mural.html
+++ b/public/dashboard/mural.html
@@ -73,12 +73,12 @@
 
         </div>
 
-        <div class="dash-right">
+        <div class="dash-right aling">
 
 
             <div class="avisos">
                 <div id="alerta">
-                </div>
+                </div><br><br><br><br><br>
                 <div class="container">
                     <h1>Publicar uma manobra</h1>
                     <div class="div-form">
