--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
       }
     }).then(data => {
       sessionStorage.totalUser = data.data;
-      alert(data.data);
+      // alert(data.data);
     }).catch(error => {
       alert('Problema ao requisitar usuários! ' + error);
     });
